# technical-test-lobster

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml  setup.sh
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
migrations/2025-03-06-102557_create_transfers/: up.sql
src/: main.rs  schema.rs
src/api/: mod.rs  transfers.rs
src/models/: mod.rs  transfer.rs
src/repositories/: mod.rs  transfer_repo.rs
src/services/: indexer.rs
src/utils/: eth.rs
