[package]
name = "technical-test-lobster"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2", features = ["postgres", "r2d2"] }
web3 = "0.19"
config = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
hex = "0.4"