[package]
name = "technical-test-lobster"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
actix-files = "0.6.5"
diesel = { version = "2", features = ["postgres", "r2d2"] }
dotenv = "0.15"
env_logger = "0.11"
hex = "0.4"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
web3 = "0.19"